<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_map"
        android:title="@string/map"
        android:checked="true" />  <!-- Ativo por default -->
    <item
        android:id="@+id/nav_guide"
        android:icon="@drawable/ic_book"
        android:title="@string/guide" />
    <item
        android:id="@+id/nav_agenda"
        android:icon="@drawable/ic_calendar"
        android:title="@string/agenda" />
    <item
        android:id="@+id/nav_rewards"
        android:icon="@drawable/ic_redeem"
        android:title="@string/rewards" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />


</menu>